# mykiteconnect

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
.devcontainer/: Dockerfile  devconatiner.json
.github/ISSUE_TEMPLATE/: bug_report.md
mykiteconnect/: __init__.py  __version__.py  connect.py  exceptions.py  ticker.py
